--- a/apps/beach-manager/Cargo.toml
+++ b/apps/beach-manager/Cargo.toml
@@ -8,6 +8,7 @@ build = "build.rs"
 beach_client_core = { package = "beach", path = "../beach" }
 axum = "0.7"
 tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "signal"] }
+tokio-util = { version = "0.7", features = ["full"] }
 tower = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
