--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,23 +32,32 @@ services:
     image: rustlang/rust:nightly@sha256:5766e2ac4aec7297945133b9cebb031acea6964b204b175868279a9a87ab5a95
     container_name: beach-manager
     working_dir: /app
-    command: ["cargo", "run", "-p", "beach-manager"]
+    env_file:
+      - .env
+      - .env.local
+    command:
+      - bash
+      - -lc
+      - |
+        : > /var/log/beach-manager/beach-manager.log
+        exec /app/scripts/docker/beach-manager-entry.sh cargo run -p beach-manager
     environment:
       DATABASE_URL: postgres://postgres:postgres@beach-postgres:5432/beach_manager
       REDIS_URL: redis://beach-redis:6379
       AUTH_BYPASS: "0"
       BEACH_ROAD_URL: http://beach-road:4132
       PUBLIC_MANAGER_URL: http://127.0.0.1:8080
-      BEACH_GATE_URL: ${BEACH_GATE_URL:-http://beach-gate:4133}
+      BEACH_GATE_URL: http://beach-gate:4133
       BEACH_GATE_JWKS_URL: http://beach-gate:4133/.well-known/jwks.json
       BEACH_GATE_ISSUER: beach-gate
       BEACH_GATE_AUDIENCE: private-beach-manager
+      BEACH_GATE_SIGNING_KID_PATH: /secrets/beach-gate-signing.kid
       CLERK_JWKS_URL: ${CLERK_JWKS_URL:-}
       CLERK_ISSUER: ${CLERK_ISSUER:-}
       CLERK_AUDIENCE: ${CLERK_AUDIENCE:-}
       BEACH_SESSION_SERVER: http://beach-road:4132
       STDOUT_LOG: ${BEACH_MANAGER_STDOUT_LOG:-info}
-      BEACH_MANAGER_FILE_LOG: ${BEACH_MANAGER_FILE_LOG:-trace}
+      BEACH_MANAGER_FILE_LOG: ${BEACH_MANAGER_FILE_LOG:-info,beach_manager=trace}
       LOG_PATH: /var/log/beach-manager/beach-manager.log
       # Expose host-reachable ICE candidates for WebRTC fast-path.
       # Set BEACH_ICE_PUBLIC_IP to your host's LAN IP (e.g., 192.168.68.51) so
@@ -58,8 +67,10 @@ services:
       BEACH_ICE_PUBLIC_HOST: ${BEACH_ICE_PUBLIC_HOST:-host.docker.internal}
       BEACH_ICE_PORT_START: ${BEACH_ICE_PORT_START:-62000}
       BEACH_ICE_PORT_END: ${BEACH_ICE_PORT_END:-62100}
+      RUST_LOG: info,controller=debug
     volumes:
       - .:/app
+      - ./config/dev-secrets:/secrets:ro
       - cargo-target:/app/target
       - cargo-registry-beach-manager:/usr/local/cargo/registry
       - ./logs/beach-manager:/var/log/beach-manager
@@ -68,11 +79,15 @@ services:
         condition: service_healthy
       redis:
         condition: service_started
+      beach-gate:
+        condition: service_healthy
     ports:
       - "8080:8080"
       # Publish a small UDP port range for ICE. Keep this in sync with
       # BEACH_ICE_PORT_START/END above.
       - "62000-62100:62000-62100/udp"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     networks:
       - beach-network
   beach-road:
@@ -86,7 +101,7 @@ services:
       BEACH_SESSION_SERVER: http://beach-road:4132
       BEACH_PUBLIC_SESSION_SERVER: http://127.0.0.1:4132
       BEACH_ROAD_PORT: 4132
-      RUST_LOG: info
+      RUST_LOG: info,beach_road::heartbeat=debug,beach_road::webrtc=debug
     volumes:
       - .:/app
       - cargo-target:/app/target
@@ -125,11 +140,19 @@ services:
       BEACH_GATE_TOKEN_ISSUER: beach-gate
       BEACH_GATE_SERVICE_AUDIENCE: private-beach-manager
       BEACH_GATE_DEFAULT_ENTITLEMENTS: "rescue:fallback,private-beach:turn,pb:beaches.read,pb:beaches.write,pb:sessions.read,pb:sessions.write,pb:control.read,pb:control.write,pb:control.consume,pb:agents.onboard,pb:harness.publish"
-      # BEACH_GATE_SIGNING_KEY_PATH: /secrets/beach-gate-ec256.pem
+      BEACH_GATE_SIGNING_KEY_PATH: /secrets/beach-gate-ec256.pem
+      BEACH_GATE_SIGNING_KID_PATH: /secrets/beach-gate-signing.kid
     volumes:
       - .:/app
+      - ./config/dev-secrets:/secrets
     ports:
       - "4133:4133"
+    healthcheck:
+      test: ["CMD-SHELL", "curl -fsS http://localhost:4133/.well-known/jwks.json >/dev/null"]
+      interval: 10s
+      timeout: 3s
+      retries: 30
+      start_period: 5s
     networks:
       - beach-network
   private-beach-rewrite-2:
@@ -142,7 +165,7 @@ services:
       NEXT_PUBLIC_PRIVATE_BEACH_MANAGER_URL: http://localhost:8080
       NEXT_PUBLIC_PRIVATE_BEACH_MANAGER_TOKEN: ${NEXT_PUBLIC_PRIVATE_BEACH_MANAGER_TOKEN:-}
       NEXT_PUBLIC_PRIVATE_BEACH_ROAD_URL: http://localhost:4132
-      PRIVATE_BEACH_ROAD_URL: http://localhost:4132
+      PRIVATE_BEACH_ROAD_URL: http://beach-road:4132
       PRIVATE_BEACH_MANAGER_URL: http://beach-manager:8080
       PRIVATE_BEACH_MANAGER_TOKEN: ${PRIVATE_BEACH_MANAGER_TOKEN:-}
       PRIVATE_BEACH_GATE_URL: http://beach-gate:4133
