--- a/apps/beach/Cargo.toml
+++ b/apps/beach/Cargo.toml
@@ -25,13 +25,14 @@ futures-util = "0.3"
 url = "2"
 once_cell = "1.19"
 if-addrs = "0.10"
-bytes = "1"
+bytes = { version = "1", features = ["serde"] }
 bincode = "1"
 reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
 rand = "0.8"
 uuid = { version = "1", features = ["v4"] }
 serde_json = "1"
 async-trait = "0.1"
+futures = "0.3"
 dotenvy = "0.15"
 clap = { version = "4", features = ["derive", "env"] }
 anyhow = "1"
@@ -61,6 +62,7 @@ directories = "5"
 keyring = "2"
 rpassword = "7"
 toml = "0.8"
+prometheus = "0.13"
 
 [dev-dependencies]
 hyper = { version = "0.14", features = ["server"] }
