great manager rewrite

--- a/.env.local
+++ b/.env.local
@@ -6,6 +6,8 @@
 
 # Local TURN configuration for docker-compose (coturn + beach-gate).
 BEACH_GATE_TURN_SECRET=beach-dev-turn-secret
-BEACH_GATE_TURN_URLS=turn:127.0.0.1:3478
+# Let scripts/dockerup set BEACH_TURN_EXTERNAL_IP/BEACH_GATE_TURN_URLS to your LAN IP.
+# Fallback here keeps browser/containers pointed at the host (or explicit LAN IP).
+BEACH_GATE_TURN_URLS=turn:${BEACH_TURN_EXTERNAL_IP:-host.docker.internal}:3478
 BEACH_GATE_TURN_REALM=turn.private-beach.test
 BEACH_GATE_TURN_REQUIRED_ENTITLEMENTS=private-beach:turn
