--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
   "crates/harness-proto",
   "crates/manager-sdk",
   "crates/test-timeout",
+  "crates/transport-bus",
 ]
 exclude = [
   "apps/beach-cabana",
