--- a/apps/beach-manager/Cargo.toml
+++ b/apps/beach-manager/Cargo.toml
@@ -26,6 +26,8 @@ redis = { version = "0.23", features = ["aio", "tokio-comp"] }
 reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
 jsonwebtoken = "9"
 base64 = "0.21"
+hmac = "0.12"
+sha1 = "0.10"
 chrono = { version = "0.4", features = ["serde"] }
 prometheus = "0.13"
 once_cell = "1.19"
@@ -48,6 +50,7 @@ serde_json = "1.0"
 test-timeout = { path = "../../crates/test-timeout" }
 bytes = "1"
 http-body-util = "0.1"
+serial_test = "2"
 
 [build-dependencies]
 chrono = { version = "0.4", default-features = false, features = ["clock"] }
